--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Cats/Assets/Cat/Custom
+ContentBrowserTab1.SelectedPaths=/Game/Cats/Map
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -390,8 +390,8 @@ AnimInstance="\"Object\" "
 ArrowComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 Adults_C="\"Object\" "
-BaseEntity_C="\"Object\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Pawn="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BaseEntity_C="\"Object\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Actor.Tags\" "
 Children_C="\"Object\" "
 AnimationStateGraph="\"Object\" "
 AnimationGraph="\"Object\" "
@@ -406,7 +406,7 @@ BlendSpace="\"Object\" "
 AnimationAsset="\"Object\" "
 Cat_C="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 Character="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Mouse_C="\"Object\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Mouse_C="\"Object\" \"Object.Actor.Tags\" "
 SplineComponent="\"Object\" "
 MouseArea_C="\"Object\" \"Object.Default.ListeMouse\" "
 PostProcessVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -478,15 +478,10 @@ AnimGraphNode_BlendSpaceGraph="\"Object\" "
 AnimGraphNode_BlendSpaceGraphBase="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
-InputModifierResponseCurveExponential="\"Object\" "
+InputModifierResponseCurveExponential=
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Cats/AI/MouseController.MouseController
-OpenAssetsAtExit=/Game/Cats/AI/BT_Mouse.BT_Mouse
-OpenAssetsAtExit=/Game/Cats/AI/BBMouse.BBMouse
-OpenAssetsAtExit=/Game/Cats/Blueprint/Mouse.Mouse
-OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1571,8 +1566,9 @@ RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_u
 
 [MRU]
 MRUItem0=/Game/Cats/Map/ThirdPersonMap
-MRUItem1=/Game/Cats/Map/StartingScreen
-MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Cats/Map/Parc
+MRUItem2=/Game/Cats/Map/StartingScreen
+MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1741,7 +1737,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 AnimGraphNode_BlendSpaceGraph=AnimGraphNode_BlendSpaceGraph.Blend Space.None
 BlendSpace=AnimGraphNode_BlendSpaceGraph.Blend Space.None
 BlendSpaceGraph=AnimGraphNode_BlendSpaceGraph.Blend Space.None
-PaperBall_C=
+PaperBall_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 Balls_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 
 [DetailCategories]
@@ -3200,29 +3196,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Assets/Cat/Custom/Anim_Cat_IDLE_00
-MRUItem1=/Game/Cats/Blueprint/PaperBall
-MRUItem2=/Game/Cats/Assets/Cat/Custom/Walk_BS
-MRUItem3=/Game/Cats/Assets/Cat/Custom/Cat_ABP
-MRUItem4=/Game/Cats/Map/ThirdPersonMap
-MRUItem5=/Game/Cats/Blueprint/Cat
-MRUItem6=/Game/Cats/AI/BTTask_RandomMove
-MRUItem7=/Game/Cats/AI/BTTask_RunAway
-MRUItem8=/Game/Cats/Blueprint/Mouse
-MRUItem9=/Game/Cats/AI/BT_Mouse
-MRUItem10=/Game/Cats/AI/MouseController
-MRUItem11=/Game/Cats/Blueprint/BaseEntity
-MRUItem12=/Game/Cats/AI/BTTask_Die
-MRUItem13=/Game/Cats/Blueprint/MouseArea
-MRUItem14=/Game/Cats/AI/BTDecorator_IfBool
-MRUItem15=/Game/Cats/AI/BTTask_IfBool
-MRUItem16=/Game/Cats/Blueprint/CatSaveGame
-MRUItem17=/Game/Cats/Blueprint/Breakable
-MRUItem18=/Game/Cats/Blueprint/BaseEntity2
-MRUItem19=/Game/Cats/AI/RandomPoint
+MRUItem0=/Game/Cats/Map/ThirdPersonMap
+MRUItem1=/Game/Cats/Map/Parc
+MRUItem2=/Game/Cats/Assets/Cat/Custom/Anim_Cat_IDLE_00
+MRUItem3=/Game/Cats/Blueprint/PaperBall
+MRUItem4=/Game/Cats/Assets/Cat/Custom/Walk_BS
+MRUItem5=/Game/Cats/Assets/Cat/Custom/Cat_ABP
+MRUItem6=/Game/Cats/Blueprint/Cat
+MRUItem7=/Game/Cats/AI/BTTask_RandomMove
+MRUItem8=/Game/Cats/AI/BTTask_RunAway
+MRUItem9=/Game/Cats/Blueprint/Mouse
+MRUItem10=/Game/Cats/AI/BT_Mouse
+MRUItem11=/Game/Cats/AI/MouseController
+MRUItem12=/Game/Cats/Blueprint/BaseEntity
+MRUItem13=/Game/Cats/AI/BTTask_Die
+MRUItem14=/Game/Cats/Blueprint/MouseArea
+MRUItem15=/Game/Cats/AI/BTDecorator_IfBool
+MRUItem16=/Game/Cats/AI/BTTask_IfBool
+MRUItem17=/Game/Cats/Blueprint/CatSaveGame
+MRUItem18=/Game/Cats/Blueprint/Breakable
+MRUItem19=/Game/Cats/Blueprint/BaseEntity2
 
 [MaterialEditor]
 PrimType=1
